# claude-code-stop-hook-silent-tool-stall-recovery

./: README.md  pyproject.toml
stall_watch/: __init__.py  event_log.py  guardrails.py  hook.py  recovery.py  simulate.py  transcript.py
stall_watch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_guardrails.py  test_hook.py  test_recovery.py  test_smoke_end_to_end.py  test_stall_signatures.py  test_transcript.py
